force-app/main/default/objects/Territory_Level_Plan__c/Territory_Level_Plan__c.object-meta.xml
<CustomObject>
    <label>Significant Events</label>
    <nameField>
        <displayFormat>TN-{00000}</displayFormat>
        <label>Territory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Significant Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>