force-app/main/default/objects/Territory_Level_Plan__c/fields/Completed_Business_Review_in_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Completed_Business_Review_in_This_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Business Review in This Month</label>
    <type>Checkbox</type>
</CustomField>