force-app/main/default/objects/Territory_Level_Plan__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Distributor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>