force-app/main/default/objects/Territory_Level_Plan__c/fields/Education_Activities__c.field-meta.xml
<CustomField>
    <fullName>Education_Activities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Education Activities</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>