force-app/main/default/objects/Territory_Level_Plan__c/fields/Lost_Losing_Business_Deals__c.field-meta.xml
<CustomField>
    <fullName>Lost_Losing_Business_Deals__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lost/Losing Business/Deals</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>