force-app/main/default/objects/Territory_Level_Plan__c/fields/Sales_Performance_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Sales_Performance_Commentary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Performance Commentary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>