force-app/main/default/objects/Territory_Level_Plan__c/fields/Sales_Trend__c.field-meta.xml
<CustomField>
    <fullName>Sales_Trend__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Trend</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>