force-app/main/default/objects/Territory_Level_Plan__c/fields/Significant_People_Events__c.field-meta.xml
<CustomField>
    <fullName>Significant_People_Events__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Significant People Events</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>