force-app/main/default/objects/Territory_Level_Plan__c/fields/Situation_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Situation_Analysis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Situation Analysis</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>