force-app/main/default/objects/Territory_Level_Plan__c/fields/Summary_Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Summary_Action_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary Action Plan</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>