force-app/main/default/objects/Territory_Level_Plan__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization__c</field>
            <operation>equals</operation>
            <value>Parent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Territory_Level_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>