force-app/main/default/objects/Territory_Level_Plan__c/fields/Visited_Territory_in_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Visited_Territory_in_This_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visited Territory in This Month</label>
    <type>Checkbox</type>
</CustomField>