force-app/main/default/objects/Territory_Level_Plan__c/fields/Won_Pending_Deals__c.field-meta.xml
<CustomField>
    <fullName>Won_Pending_Deals__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Won/Pending Deals</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>